# terminal-guru

./: Cargo.toml  README.md  SPEC.md
shell-plugins/: bash.sh  fish.fish  zsh.sh
src/: cli.rs  lib.rs  main.rs  shell.rs
src/analyzer/: mod.rs
src/daemon/: mod.rs
src/db/: mod.rs
src/history/: mod.rs
src/suggest/: mod.rs
tests/: integration.rs
