[package]
name = "terminal-guru"
version = "0.1.0"
edition = "2021"
description = "AI-powered terminal assistant that watches shell history and proactively suggests optimizations, aliases, and automations"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
